--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "inquirer": "^0.12.0",
-    "random-js": "^1.0.8"
+    "random-js": "^1.0.8",
+    "xlsx": "^0.8.0"
   }
 }
