--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "inquirer": "^0.12.0",
     "random-js": "^1.0.8",
+    "should": "^8.2.2",
     "xlsx": "^0.8.0"
   }
 }
