--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "freshiesorter",
-  "version": "1.0.0",
-  "description": "A program to sort freshmen specified in a spreadsheet to evenly distribute attributes in specified columns across a fixed number of houses",
-  "main": "main.js",
-  "scripts": {
-    "test": "mocha test"
-  },
-  "author": "Yuan Yuchuan (yuchuan@u.nus.edu)",
+  "name": "sorting-hat",
+  "version": "2.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/yyc/sorting-hat.git",
+  "author": "Yuchuan <yyc478@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "mocha": "^2.4.5",
-    "random-name": "^0.1.1"
-  },
+  "private": false,
   "dependencies": {
-    "inquirer": "^0.12.0",
-    "random-js": "^1.0.8",
-    "should": "^8.2.2",
-    "xlsx": "^0.8.0"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   }
 }
