--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "lodash": "^4.17.11",
+    "vue": "^2.6.10",
+    "xlsx": "^0.14.3"
+  },
+  "devDependencies": {
+    "vue-cli": "^2.9.6",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-livereload-plugin": "^2.2.0"
   }
 }
